tests/kyverno-policies/disallow-nfs/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-skip
  namespace: test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
  volumes:
    - name: home
      nfs:
        server: nfs.example.com
        path: /home/test
    - name: configmap
      configMap:
        name: config
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
  volumes:
    - name: configmap
      configMap:
        name: config
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
  volumes:
    - name: home
      nfs:
        server: nfs.example.com
        path: /home/test
    - name: configmap
      configMap:
        name: config
