tests/kyverno-policies/disallow-nfs/test.yaml
---
name: disallow-nfs
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-nfs
    rule: nfs-volume
    resource: test-pass
    kind: Pod
    result: pass
  - policy: disallow-nfs
    rule: nfs-volume
    resource: test-fail
    kind: Pod
    result: fail
