tests/kyverno-policies/disallow-nfs/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-nfs
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-nfs
    rule: nfs-volume
    resources:
      - test-pass
    kind: Pod
    result: pass
  - policy: disallow-nfs
    rule: nfs-volume
    resources:
      - test-fail
    kind: Pod
    result: fail
